--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello new world</h1>
+    <h1>Hello new beautifull world</h1>
 </body>
 </html>
