--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    
+    <title>Anshulblogpage</title>
 </head>
 <body>
+
     <h1>Hello new beautifull world </h1>
-    <h2>we[come</h2>
+<h2>Mental-health</h2>
+<a href="mental_health/mental.html"> <img src="mentalhealth.jpg" alt="mentalhealth"></a>
+ 
+ <h2>Physical-health</h2>
+ <img src="physicalhealth.jpg" alt="physicalhealth">
+ <h2>Softskills</h2>
+ <img src="softskills.jpg" alt="softskills"> 
+
+ <h2>Technicalskills</h2>
+ <img src="Technicalskills.jpg" alt="Technicalskills">
+
+
+
+
+
+
+   
 </body>
 </html>
