--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
     <h1>Hello new beautifull world </h1>
 <h2>Mental-health</h2>
-<a href="mental_health/mental.html"> <img src="mentalhealth.jpg" alt="mentalhealth"></a>
+<a href="mental_health/mental.html"> <img src="images/mentalhealth.jpg" alt="mentalhealth"></a>
  
  <h2>Physical-health</h2>
- <img src="physicalhealth.jpg" alt="physicalhealth">
+ <img src="images/physicalhealth.jpg" alt="physicalhealth">
  <h2>Softskills</h2>
- <img src="softskills.jpg" alt="softskills"> 
+ <img src="images/softskills.jpg" alt="softskills"> 
 
  <h2>Technicalskills</h2>
- <img src="Technicalskills.jpg" alt="Technicalskills">
+ <img src="images/Technicalskills.jpg" alt="Technicalskills">
 
 
 
