--- a/index.html
+++ b/index.html
@@ -10,22 +10,20 @@
 <body>
 
     <h1>Hello new beautifull world </h1>
-<h2>Mental-health</h2>
-<a href="mental_health/mental.html"> <img src="images/mentalhealth.jpg" alt="mentalhealth"></a>
- 
- <h2>Physical-health</h2>
- <img src="images/physicalhealth.jpg" alt="physicalhealth">
- <h2>Softskills</h2>
- <img src="images/softskills.jpg" alt="softskills"> 
 
- <h2>Technicalskills</h2>
- <img src="images/Technicalskills.jpg" alt="Technicalskills">
-
-
-
-
-
-
-   
+    <ul>
+        <li><h2>Mental-health</h2>
+            <a href="mental_health/mental.html"><img src="images/mentalhealth.jpg"alt="mentalhealth"></a>
+        </li>
+        <li>
+            <h2>Physical-health</h2><img src="images/physicalhealth.jpg" alt="physicalhealth">
+        </li>
+        <li>
+            <h2>Softskills</h2><img src="images/softskills.jpg" alt="softskills"> 
+        </li>
+        <li>
+            <h2>Technicalskills</h2><img src="images/Technicalskills.jpg" alt="Technicalskills">
+        </li>
+    </ul>
 </body>
 </html>
