--- a/index.html
+++ b/index.html
@@ -6,24 +6,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Anshulblogpage</title>
+
+
+<!-- connect with bootstrap -->
+<link rel="stylesheet" href="./css/bootstrap.min.css">
+
+
+<!--  connect with css -->
+    <link rel="stylesheet" href="style.css">
+
+
+
+
+
 </head>
 <body>
 
-    <h1>Hello new beautifull world </h1>
+
+    <!-- start header area -->
+
+    <header class="header_area">
+        <div class="main_menu">
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="#">Pages</a>
+                            <a class="nav-link" href="#">Contacts</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <!-- End header area -->
+
+        <h1>Hello new beautifull world </h1>
 
     <ul>
         <li><h2>Mental-health</h2>
-            <a href="mental_health/mental.html"><img src="images/mentalhealth.jpg"alt="mentalhealth"></a>
+            <a href="mental_health/mental.html"><img src="img/mentalhealth.jpg"alt="mentalhealth"></a>
         </li>
         <li>
-            <h2>Physical-health</h2><img src="images/physicalhealth.jpg" alt="physicalhealth">
+            <h2>Physical-health</h2><img src="img/physicalhealth.jpg" alt="physicalhealth">
         </li>
         <li>
-            <h2>Softskills</h2><img src="images/softskills.jpg" alt="softskills"> 
+            <h2>Softskills</h2><img src="img/softskills.jpg" alt="softskills"> 
         </li>
         <li>
-            <h2>Technicalskills</h2><img src="images/Technicalskills.jpg" alt="Technicalskills">
+            <h2>Technicalskills</h2><img src="img/Technicalskills.jpg" alt="Technicalskills">
         </li>
     </ul>
+<!-- jquery file -->
+
+<script src="./js/jquery.3.7.0.js"></script>
+
+     <!-- connect with js -->
+     <script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
