--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="main_menu">
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo"></a>
+                    <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo" width="190" height="200"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -66,6 +66,10 @@
             <h2>Technicalskills</h2><img src="img/Technicalskills.jpg" alt="Technicalskills">
         </li>
     </ul>
+
+    <iframe width="900px" height="900px" controls
+    src="https://www.youtube.com/embed/3QIfkeA6HBY">
+    </iframe>
 <!-- jquery file -->
 
 <script src="./js/jquery.3.7.0.js"></script>
